documented all routes
